--- a/examples_and_templates/tdis_artifact_metadata.yaml
+++ b/examples_and_templates/tdis_artifact_metadata.yaml
@@ -32,7 +32,7 @@ global_attributes:
   service_endpoint_type: REST (see controlled vocabulary csv file reference)
   software_name: ArcGIS Desktop (see controlled vocabulary csv file reference)
   software_version: 10.2
-  time_period_covered: USGS High Water Marks
+  time_period_covered: 2020-07-01, 2021-09-30
   title: USGS High Water Marks
   update_freq: Annually (see controlled vocabulary csv file reference)
   use_constraint: Restricted (see controlled vocabulary csv file reference)
