--- a/examples_and_templates/tdis_artifact_metadata.yaml
+++ b/examples_and_templates/tdis_artifact_metadata.yaml
@@ -1,5 +1,14 @@
 global_attributes:
   accessibility: 4,Data are downloadable online with user interaction (see controlled vocabulary csv file reference)
+  attribute_accuracy: Attributes are approximately 90% complete. Some fields have missing values. HWM types were evaluted with an automated comparison to the notes and description fields. A handful were reclassified in the Type_Reclass field. Note: many null values are null on purpose, for instance, not all water marks need additionl notes
+  attribute_codeset_name: (repeatable) High Water Mark Field Guide
+  attribute_codeset_url: (repeatable) https://pubs.er.usgs.gov/publication/tm3A24 
+  attribute_descrip: (repeatable) Unique identification number for the site where the data was collected (*for each attribute field in the data)
+  attribute_domain_type: (repeatable) text (*for each attribute field in the data. See controlled vocabulary csv file reference)attribute_domain_value: High Water Mark examples: debris, seed line, vegetation
+  attribute_domain_value_descrip: (repeatable) Debris lines are trails of twigs, grasses, and other small debris left on sloping ground at the edge of a river where calmer water, as it receded, deposited the material
+  attribute_name: site_id (repeatable) (*list all of the data attribute fields)
+  attribute_value_range_max: (repeatable) 26
+  attribute_value_range_min: (repeatable) 1
   classification_sys: TBD
   classification_term: TBD
   contact_affiliation: University of Texas (see controlled vocabulary csv file reference)
@@ -13,7 +22,6 @@ global_attributes:
   data_stage: 3,Data requires minimal additional processing (see controlled vocabulary csv file reference)
   date_created: 2022-01-01
   date_last_updated: 2022-02-01
-  date_metadata_updated: 2022-02-01
   date_submitted: 2022-03-10
   description: 5 year Flood Plan for Region 1
   distribution_method: Published on the USGS website
